--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-pandasql
-typer
-psycopg2
-tabulate
-datasets
-transformers
-pylint
-pytest
 black
+pylint
 click
-streamlit
-gradio
-ipython
+pytest
+fastapi
+requests
+openai
